--- a/philosophy_extended_network.html
+++ b/philosophy_extended_network.html
@@ -1,7 +1,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-             <link rel="icon" type="image/png" href="https://github.com/EXDEICIDA/philosophy-visualization/raw/main/icon.png?raw=1">
+            <link rel="icon" href="https://github.com/EXDEICIDA/philosophy-visualization/raw/main/icon.png?raw=1" type="image/png">
+<link rel="shortcut icon" href="https://github.com/EXDEICIDA/philosophy-visualization/raw/main/icon.png?raw=1">
+<link rel="apple-touch-icon" href="https://github.com/EXDEICIDA/philosophy-visualization/raw/main/icon.png?raw=1">
 
             <script src="lib/bindings/utils.js"></script>
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vis-network/9.1.2/dist/dist/vis-network.min.css" integrity="sha512-WgxfT5LWjfszlPHXRmBWHkV2eceiWTOBvrKCNbdgDYTHrT2AeLCGbF4sZlZw3UMN3WtL0tGUoIAKsu8mllg/XA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
